Refactored code; added config based mode; improved documentation